Alteração do parâmetro de autorização bearer jwt
